<resources>
    <string name="app_name">Eat-reat</string>
    <string name="checkout">CheckOut</string>
    <string name="quantity"></string>
    <string name="addressTitle">Please Enter Your Details</string>
    <string name="addressLineOne">Address Line 1</string>
    <string name="addressLineTwo">Address Line 2</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="postalCode">Postal Code</string>
    <string name="submitBtn">Submit</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="headingTxtView">Welcome to Eat-reat</string>
    <string name="profileBtn">Profile</string>
    <string name="profileHeadingTxtView">My Profile</string>
    <string name="addNewAddressBtn">Add New Address</string>
    <string name="email">Email</string>
    <string name="burgerName">Beef Burger</string>
    <string name="burgerDesc">Juicy Beef Burger with fingerlicking taste</string>
    <string name="noodles">Noodles</string>
    <string name="noodlesDesc">Speciality Ramen Noodles with extreme spiciness</string>
    <string name="subHeadingHome">Snacks at a Glance</string>
    <string name="soupName">Dal Soup</string>
    <string name="soupDesc"><![CDATA[A Hot and Healthy Soup with lentils & masala\'s]]></string>
    <string name="samosa">Samosa</string>
    <string name="samosasDesc">Savoury Potato filling with tangy chutney</string>
    <string name="burritoName">Burrito</string>
    <string name="burritoDesc"><![CDATA[Beef or Veggie Burrito with salsa & guac]]></string>
    <string name="tacos">Taco\'s</string>
    <string name="tacosDesc">Beef or Vegie Tacos with mexican flavours</string>
    <string name="butterchickenName">Butter Chicken</string>
    <string name="butterChickenDesc">Spicy Butter Chicken with Superb Indian Flavours</string>
    <string name="naan">Naan Bread</string>
    <string name="naansDesc">Fluffy Naan bread made with All Purpose Flour</string>
    <string name="SH2Home"><![CDATA[Healthy & Tasty]]></string>
    <string name="SH3Home">Mexican</string>
    <string name="SH4Home">Indian</string>
    <string name="addToCart">Add to Cart</string>
    <string name="defaultAddress">Select Address</string>
    <string name="burgerPrice">3.49</string>
    <string name="noodlesPrice">9.99</string>
    <string name="dalSoupPrice">2.49</string>
    <string name="samosaPrice">2.00</string>
    <string name="burritoPrice">8.99</string>
    <string name="tacosPrice">5.99</string>
    <string name="butterChickenPrice">12.99</string>
    <string name="naanPrice">1.00</string>
    <string name="cartHeading">Cart</string>
    <string name="initial_quantity">1</string>
    <string name="placeOrder">Place Order</string>
    <string name="totalTxtView">Total:</string>
    <string name="deleteCartItem">Delete</string>
    <string name="dollarSign">$ </string>
    <string name="totalPrice" />
    <string name="checkoutHeading">CheckOut</string>
    <string name="checkoutDesc">Thank you for Ordering, your order will be delivered soon</string>
    <string name="homeBtn">Order Again</string>
    <string name="confirmAddress">Please Confirm Your Address</string>
    <item name="profileHeading" type="id" />
    <item name="addressCardRecyclerView" type="id" />
    <item name="addNewAddressBtn" type="id" />
</resources>