<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">


    <TextView
        android:id="@+id/cartHeadingTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cartHeading"
        android:textColor="@color/black"
        android:textSize="@dimen/headingSize24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cartHeadingTxtView"
        >

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkoutHLL"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/checkoutButton">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalTxtView"
            android:text="@string/totalTxtView"
            android:textSize="@dimen/headingSize24"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalPrice"
            android:text="@string/totalPrice"
            android:textSize="@dimen/headingSize24"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            ></TextView>




    </LinearLayout>
    <Button
        android:id="@+id/checkoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>